Tue Feb 26 16:53:13 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el (ruby-calculate-indent): should distinguish
	  comment and # in strings.  [ruby-dev:33874]

Tue Feb 26 16:41:27 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (combi_len, rb_ary_product): check for overflow.
	  [ruby-Bugs-18355]

Tue Feb 26 16:38:10 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (recursive_cmp): compare minimal length parts.

Tue Feb 26 16:06:00 2008  Technorama Ltd.  <oss-ruby@technorama.net>

	* ext/openssl/ossl_{ec,dh,dsa,rsa}.c: Remove useless warnings.

	* ext/openssl/ossl_asn1.c: Simplify code.

	* ext/openssl/ossl_ssl_session.c Fix compiler warnings.
	  Undefine #id if SSL_SESSION_get_id is not supported.

Tue Feb 26 15:50:10 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (value_expr_gen): removed inappropriate warning.
	  [ruby-core:15660]

Tue Feb 26 15:43:42 2008  Tanaka Akira  <akr@fsij.org>

	* parse.y (tokadd_escape): refactored.  [ruby-core:15657]

Tue Feb 26 15:30:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_eql, rb_ary_cmp): get rid of stack overflow with
	  self-recursive constructs.  [ruby-Bugs-18356]

Tue Feb 26 01:16:01 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (ROBJECT_NUMIV): renamed from ROBJECT_LEN.
	  (ROBJECT_IVPTR): renamed from ROBJECT_PTR.

	* variable.c: follow the above renaming.

	* object.c: ditto.

	* gc.c: ditto.

	* marshal.c: ditto.

Mon Feb 25 17:30:29 2008  Technorama Ltd.  <oss-ruby@technorama.net>

	* ext/openssl/digest.c ext/openssl/lib/openssl/digest.rb:
	  Commit patch #9280 from Akinori MUSHA.
	  Simplify the OpenSSL::Digest class and make use of the
	  existing Digest framework.
	  Enhance performance.

Mon Feb 25 15:33:29 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* bignum.c (big2str_karatsuba): initialize cache if not initialized.

	* bignum.c (Init_Bignum): delayed initializing cache.
	  [ruby-dev:33930]
